[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overload-108"
version = "1.0.0"
description = "108-Overload: National Emergency Ambulance Dispatch Simulator"
requires-python = ">=3.11"
dependencies = [
  "openenv>=0.1.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["env", "server"]
